[package]
name = "hasmariahcareybreachedcontainment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
tokio = { version = "1.21.2", features = ["full"] }
warp = "0.3.3"
pretty_env_logger = "*"
